--- a/literatura.bib
+++ b/literatura.bib
@@ -40,7 +40,14 @@
   address   = {Chichester, UK},
   isbn      = {978-0-470-05819-0}
 }
-
+@book{cite:pmsha,
+  title     = {Permanent Magnet Synchronous and Brushless DC Motor Drives},
+  author    = {Krishnan, Ramu},
+  year      = {2010},
+  publisher = {CRC Press},
+  address   = {Boca Raton},
+  isbn      = {978-0824753849}
+}
 @INPROCEEDINGS{cite:karakteristike_motora,
 
   author={Solomon, Olusegun and Famouri, Parviz},
