--- a/diplomski_rad.tex
+++ b/diplomski_rad.tex
@@ -101,9 +101,9 @@ brzog upravljanja brzinom vrtnje ovih motora \cite{cite:karakteristike_motora}.
 % --- UPRAVLJANJE BRZINOM VRTNJE ---
 
 Upravljanje brzinom vrtnje motora BLDC postiže se održavanjem kuta između polja
-rotora i statora. Za to upravljački sklop mora poznavati položaj rotora, što se obično
-postiže osjetilima Hallovog učinka ili enkoderima pozicije. Postoje i metode
-upravljanja koje ne koriste osjetila za određivanje položaja rotora. One
+rotora i statora. Za to upravljački sklop mora poznavati položaj rotora, što se
+obično postiže osjetilima Hallovog učinka ili enkoderima pozicije. Postoje i
+metode upravljanja koje ne koriste osjetila za određivanje položaja rotora. One
 smanjuju troškove, složenost i masu sustava, što ih čini pogodnijim izborom za
 dronove. Kod metode komutacije u šest koraka popularna je tehnika praćenja
 protuelektromotorne sile (PEMS) u kojoj upravljač zaključuje položaj rotora
@@ -145,9 +145,9 @@ koji djeluju kao elektromagneti, dok su na rotoru stalni magneti
 \cite{elektromotor-beskolektorski}. Postoji unutarnji ili \textit{inrunner}
 motor kod kojeg se rotor nalazi unutar statora. Takvi motori općenito imaju
 manji moment tromosti i sposobni su za veće brzine vrtnje \cite{cite:bldc}.
-Isto tako postoji i vanjski ili \textit{outrunner} motor kojem je rotor
-izvana i okružuje stator. Ovakvi motori obično daju veći okretni moment pri
-nižim brzinama vrtnje \cite{cite:bldc}.
+Isto tako postoji i vanjski ili \textit{outrunner} motor kojem je rotor izvana
+i okružuje stator. Ovakvi motori obično daju veći okretni moment pri nižim
+brzinama vrtnje \cite{cite:bldc}.
 
 \missingfigure{umetni sliku presjeka motora}
 
@@ -160,9 +160,9 @@ većina opisanih principa vrijedi i za motore PMSM
 \cite{elektromotor-sa-stalnim-magnetima}.
 
 Rad motora bez četkica temelji se na kontroliranoj interakciji između
-magnetskog polja rotora i rotirajućeg
-magnetskog polja statora. Za razliku od klasičnih istosmjernih motora,
-rotirajuće polje statora ovdje se stvara elektronički. Taj zadatak obavlja upravljački sklop ESC, koji sekvencijalnim
+magnetskog polja rotora i rotirajućeg magnetskog polja statora. Za razliku od
+klasičnih istosmjernih motora, rotirajuće polje statora ovdje se stvara
+elektronički. Taj zadatak obavlja upravljački sklop ESC, koji sekvencijalnim
 napajanjem statorskih namota precizno sinkronizira polje statora s položajem
 rotora \cite{cite:disertacija}. Cilj je održavati optimalan kut između njihovih
 magnetskih vektora kako bi se maksimizirao okretni moment. Zbog dobrog
@@ -177,9 +177,8 @@ pouzdanosti, učinkovitosti često i preko 80\% \cite{motor-ucinkovitost} i
 mogućnosti postizanja iznimno velikih brzina (preko 70 000 okretaja u minuti
 \cite{motor-rpm}), beskolektorski se motori danas široko primjenjuju u
 sustavima kao što su bespilotne letjelice, servopogoni, pogoni tvrdih diskova u
-računalima, medicinski uređaji i moderni alatni strojevi.
-\todo{gdje se ne koristi}
-\newpage
+računalima, medicinski uređaji i moderni alatni strojevi. \todo{gdje se ne
+	koristi} \newpage
 
 \section{Matematički model motora}
 \label{sec:mat_model}
@@ -270,9 +269,9 @@ statorskih namota. Ovisno o tome, postoje trapezni valni oblik (slika
 protuelektromotorne sile.
 
 Poznavanje valnog oblika protuelektromotorne sile važno je pri upravljanju
-motorom jer se valni oblici pogonskog signala i PEMS-a moraju
-poklapati radi minimizacije valovitosti momenta (odjeljak
-\ref{trap:torque-ripple}) \cite{MicrochipAN885}.
+motorom jer se valni oblici pogonskog signala i PEMS-a moraju poklapati radi
+minimizacije valovitosti momenta (odjeljak \ref{trap:torque-ripple})
+\cite{MicrochipAN885}.
 
 \begin{figure}[h!]
 	\centering
@@ -313,26 +312,24 @@ Na trofaznom motoru BLDC namotaji na statoru mogu biti u dvije glavne
 konfiguracije:
 
 U \textbf{zvjezdastom spoju (eng. \textit{wye, star connection})} tri zavojnice
-spojene su u zajedničkoj središnjoj točki, zvjezdištu (točka $n$ na
-slici \ref{fig:wye}). Fazni napon, $V_{faza}$ [V], niži je od mrežnog
-napona, $V_{\text{mreža}}$ [V], prema izrazu $V_{faza} = V_{\text{mreža}} / \sqrt{3}$, a fazna struja, $I_{faza}$ [A], jednaka je
-mrežnoj struji.
+spojene su u zajedničkoj središnjoj točki, zvjezdištu (točka $n$ na slici
+\ref{fig:wye}). Fazni napon, $V_{faza}$ [V], niži je od mrežnog napona,
+$V_{\text{mreža}}$ [V], prema izrazu $V_{faza} = V_{\text{mreža}} / \sqrt{3}$,
+a fazna struja, $I_{faza}$ [A], jednaka je mrežnoj struji.
 
 U \textbf{trokutnom spoju (eng. \textit{Delta connection})} zavojnice su
-spojene međusobno u trokut (slika \ref{fig:delta}). Fazni napon,
-$V_{faza}$ [V], jednak je mrežnom naponu, $V_{\text{mreža}}$ [V], a
-fazna struja, $I_{faza}$ [A], niža je od mrežne struje,
-$I_{\text{mreža}}$ [A], prema izrazu $I_{faza} = I_{\text{mreža}} /
-	\sqrt{3}$.
+spojene međusobno u trokut (slika \ref{fig:delta}). Fazni napon, $V_{faza}$
+[V], jednak je mrežnom naponu, $V_{\text{mreža}}$ [V], a fazna struja,
+$I_{faza}$ [A], niža je od mrežne struje, $I_{\text{mreža}}$ [A], prema izrazu
+$I_{faza} = I_{\text{mreža}} / \sqrt{3}$.
 
 Zbog ove razlike u faznim naponima, za dva motora s ovim konfiguracijama i
 pripadnim konstantama motora $K_{t, Z}$ i $K_{t, T}$ za proizvesti jednak
 moment vrijedi:
 
-Moment, $\tau$ [Nm], može se izraziti preko izraza $\tau = K_t \cdot
-	I_{faza}$, gdje je $K_t$ konstanta momenta [Nm/A], a $I_{faza}$
-fazna struja [A]. Odnos konstanti momenta je $K_{t, T} = K_{t, Z} / \sqrt{3}$
-\cite{cite:disertacija}.
+Moment, $\tau$ [Nm], može se izraziti preko izraza $\tau = K_t \cdot I_{faza}$,
+gdje je $K_t$ konstanta momenta [Nm/A], a $I_{faza}$ fazna struja [A]. Odnos
+konstanti momenta je $K_{t, T} = K_{t, Z} / \sqrt{3}$ \cite{cite:disertacija}.
 
 Da bi se proizveo jednak moment, odnos faznih struja mora biti:
 
@@ -405,15 +402,15 @@ brzine vrtnje.
 
 S jedne strane, okretni moment ($\tau$) izravno je proporcionalan struji ($I$)
 prema izrazu $\tau = K_t \cdot I$ (odjeljak \ref{sec:konfiguracija_namotaja}).
-S druge strane, rotacijom se inducira PEMS ($V_{pems}$) koji se
-suprotstavlja naponu napajanja i proporcionalan je kutnoj brzini ($\omega$)
-prema izrazu $V_{pems} = K_e \cdot \omega$. Porast brzine uzrokuje
-porast $V_{pems}$, što smanjuje efektivni napon na namotajima, a time i
-struju i raspoloživi moment. Motor dostiže svoju maksimalnu brzinu, odnosno
-brzinu praznog hoda, kada se $V_{pems}$ približi naponu napajanja, čime
-se moment smanjuje na nulu (zanemarujući trenje) što se može vidjeti na slici
-\ref{fig:torque_speed}. U zoni kontinuiranog momenta, porast brzine ne utječe na
-moment i to područje je omeđeno nazivnim momentom i nazivnom brzinom.
+S druge strane, rotacijom se inducira PEMS ($V_{pems}$) koji se suprotstavlja
+naponu napajanja i proporcionalan je kutnoj brzini ($\omega$) prema izrazu
+$V_{pems} = K_e \cdot \omega$. Porast brzine uzrokuje porast $V_{pems}$, što
+smanjuje efektivni napon na namotajima, a time i struju i raspoloživi moment.
+Motor dostiže svoju maksimalnu brzinu, odnosno brzinu praznog hoda, kada se
+$V_{pems}$ približi naponu napajanja, čime se moment smanjuje na nulu
+(zanemarujući trenje) što se može vidjeti na slici \ref{fig:torque_speed}. U
+zoni kontinuiranog momenta, porast brzine ne utječe na moment i to područje je
+omeđeno nazivnim momentom i nazivnom brzinom.
 
 \begin{figure}[h!]
 	\centering
@@ -860,13 +857,13 @@ zbog šuma uzrokovanog sklapanjem tranzistora vidljivog na slici
 	\label{fig:pwm_sum}
 \end{figure}
 
-Alternativna strategija je uzorkovanje na kraju niskog
-stanja signala PWM-a. U tom intervalu, kada struja recirkulira kroz diodu ili
-tranzistor, mjerenje je jednostavnije i otpornije na šum jer se potencijal
-zvjezdišta može smatrati uzemljenim, no nedostatak je nemogućnost postizanja
-100\% radnog ciklusa \label{text:pwm_off}. Postoje i hibridne metode koje
-kombiniraju ova dva pristupa kako bi iskoristile prednosti obiju strategija
-ovisno o brzini i opterećenju motora \cite{ST_AN1946}.
+Alternativna strategija je uzorkovanje na kraju niskog stanja signala PWM-a. U
+tom intervalu, kada struja recirkulira kroz diodu ili tranzistor, mjerenje je
+jednostavnije i otpornije na šum jer se potencijal zvjezdišta može smatrati
+uzemljenim, no nedostatak je nemogućnost postizanja 100\% radnog ciklusa
+\label{text:pwm_off}. Postoje i hibridne metode koje kombiniraju ova dva
+pristupa kako bi iskoristile prednosti obiju strategija ovisno o brzini i
+opterećenju motora \cite{ST_AN1946}.
 
 Događaj prolaska kroz nulu događa se točno na polovici trajanja jednog
 komutacijskog koraka, kao što se može vidjeti na slici \ref{fig:pwm_drive}.
@@ -887,18 +884,19 @@ za sljedeću komutaciju potrebno je pričekati vrijeme koje odgovara zakretu od
 \label{sec:pokretanje}
 
 Pokretanje motora bez osjetila ne može se izvesti isključivo detektiranjem
-PEMS-a jer on nije prisutan pri mirovanju i vrlo malim brzinama. Zbog toga je potrebno motor dovesti do stanja u kojem može očitavati PEMS.
+PEMS-a jer on nije prisutan pri mirovanju i vrlo malim brzinama. Zbog toga je
+potrebno motor dovesti do stanja u kojem može očitavati PEMS.
 
 Prije pokretanja, položaj rotora je nepoznat. Kako bi se postavio u poznati
 početni položaj, na kratko se vrijeme uključe dva fazna namotaja. To stvara
 statično magnetsko polje koje poravnava rotor u određenom smjeru. Ova faza se
 naziva poravnanje (eng. \textit{alignment}). Nakon poravnanja, motor se pokreće
-u otvorenoj petlji (eng. \textit{open-loop}). Upravljački sklop ESC forsira komutaciju
-namotaja prema unaprijed definiranom, postupno rastućem vremenskom slijedu, bez
-ikakve povratne informacije o stvarnom položaju. Cilj je ubrzati motor do
-brzine na kojoj će inducirani PEMS biti dovoljno velik za pouzdanu detekciju.
-Kada brzina dosegne prag na kojem detekcija prolaska kroz nulu postaje
-pouzdana, sustav prelazi u rad sa zatvorenom petljom (eng.
+u otvorenoj petlji (eng. \textit{open-loop}). Upravljački sklop ESC forsira
+komutaciju namotaja prema unaprijed definiranom, postupno rastućem vremenskom
+slijedu, bez ikakve povratne informacije o stvarnom položaju. Cilj je ubrzati
+motor do brzine na kojoj će inducirani PEMS biti dovoljno velik za pouzdanu
+detekciju. Kada brzina dosegne prag na kojem detekcija prolaska kroz nulu
+postaje pouzdana, sustav prelazi u rad sa zatvorenom petljom (eng.
 \textit{closed-loop}). Od ovog trenutka, komutacija se više ne temelji na
 fiksnom vremenu, već je sinkronizirana sa stvarnim položajem rotora
 detektiranim prolaskom PEMS-a kroz nulu \cite{Recasens2021}.
@@ -997,13 +995,14 @@ prolaska signala PEMS-a kroz referentni napon virtualnog zvjezdišta.
 U eksperimentu je korišten komercijalno dostupan trofazni istosmjerni motor bez
 četkica modela \textit{A2212/13T}. Oznaka \textit{A2212/13T} odnosi se na
 njegove konstrukcijske značajke. Oznaka \textit{2212} specificira dimenzije
-statora: promjer od \SI{22}{\milli\metre} i visinu od \SI{12}{\milli\metre}. Motor ima 14 magnetskih polova na
-rotoru i 12 utora na statoru, što odgovara uobičajenoj konfiguraciji 14P12N za
-ovu vrstu motora. Riječ je o vanjskom motoru konstante brzine od 1000 KV, što
-specificira da motor teoretski, u neopterećenom stanju, postiže brzinu vrtnje
-od 1000 okretaja u minuti za svaki volt napona napajanja. Oznaka \textit{13T}
-odnosi se na broj namotaja na svakom polu statora, što utječe na njegove
-momentne i brzinske karakteristike. \missingfigure{slika motora}
+statora: promjer od \SI{22}{\milli\metre} i visinu od \SI{12}{\milli\metre}.
+Motor ima 14 magnetskih polova na rotoru i 12 utora na statoru, što odgovara
+uobičajenoj konfiguraciji 14P12N za ovu vrstu motora. Riječ je o vanjskom
+motoru konstante brzine od 1000 KV, što specificira da motor teoretski, u
+neopterećenom stanju, postiže brzinu vrtnje od 1000 okretaja u minuti za svaki
+volt napona napajanja. Oznaka \textit{13T} odnosi se na broj namotaja na svakom
+polu statora, što utječe na njegove momentne i brzinske karakteristike.
+\missingfigure{slika motora}
 
 \section{Enkoder}
 \label{sec:enkoder}
@@ -1045,7 +1044,8 @@ podrška za simulaciju elektroničkih krugova, za obradu i vizualizaciju mjernih
 podataka te za pojednostavljeno upravljanje brzinom vrtnje. U fazi istraživanja
 teme, ponašanje ključnih dijelova pogonskog sklopa simulirano je u alatu
 \textit{LTspice}. To je omogućilo bolje razumijevanje koncepata poput ponašanja
-struje pri različitim tehnikama primjene PWM-a na upravljanje (odjeljak \ref{sss:pwm}).
+struje pri različitim tehnikama primjene PWM-a na upravljanje (odjeljak
+\ref{sss:pwm}).
 
 Podaci prikupljeni s enkodera su uvezeni, obrađeni i vizualizirani s pomoću
 programskog paketa \textit{MATLAB}. Obrada u \textit{MATLAB}-u omogućila je
@@ -1054,8 +1054,8 @@ trenutke detektiranog prolaska kroz nulu te odziv brzine kroz vrijeme što je
 olakšalo i ubrzalo proces razvoja algoritma.
 
 Za upravljanje brzinom vrtnje korištena je jednostavna skripta napisana u
-jeziku Python za slanje tražene brzine na sklop ESC te primanje trenutačne brzine
-rotora preko sučelja \texttt{UART}.
+jeziku Python za slanje tražene brzine na sklop ESC te primanje trenutačne
+brzine rotora preko sučelja \texttt{UART}.
 
 %-------------------------------------------------------------------------------
 \chapter{Implementacija}
@@ -1117,13 +1117,14 @@ signala PWM-a, općenamjenski tajmeri (\texttt{TIM3}, \texttt{TIM15},
 Za upravljanje trofaznim mosnim pretvaračem, teorijski opisanim u odjeljku
 \ref{sec:trofazno_upravljanje}, koristi se napredni tajmer \texttt{TIM1},
 konfiguriran za generiranje tri para komplementarnih signala PWM-a. Frekvencija
-signala PWM-a postavljena je na \SI{30}{\kilo\hertz}. Ova frekvencija predstavlja kompromis
-između sklopnih gubitaka na tranzistorima MOSFET i izbjegavanja čujnog područja
-rada. Za sprječavanje pojave kratkog spoja (eng. \textit{shoot-through}) unutar
-polumostova pretvarača, na tajmeru je sklopovski implementirano mrtvo vrijeme
-(eng. \textit{dead time}) u trajanju od 50 taktova sistemskog sata. Upravljanje
-pojedinim izlazima PWM-a ostvareno je direktnim upisom u registre tajmera čime
-se postiže brza kontrola nad aktivnim fazama motora.
+signala PWM-a postavljena je na \SI{30}{\kilo\hertz}. Ova frekvencija
+predstavlja kompromis između sklopnih gubitaka na tranzistorima MOSFET i
+izbjegavanja čujnog područja rada. Za sprječavanje pojave kratkog spoja (eng.
+\textit{shoot-through}) unutar polumostova pretvarača, na tajmeru je sklopovski
+implementirano mrtvo vrijeme (eng. \textit{dead time}) u trajanju od 50 taktova
+sistemskog sata. Upravljanje pojedinim izlazima PWM-a ostvareno je direktnim
+upisom u registre tajmera čime se postiže brza kontrola nad aktivnim fazama
+motora.
 
 \missingfigure{Prikaz komplementarnih PWM signala s jasno označenim mrtvim vremenom, snimljen osciloskopom na jednom polumostu}
 
@@ -1138,10 +1139,11 @@ tajmer PWM-a, \texttt{TIM1}, nakon svakog ciklusa okida pomoćni tajmer
 \texttt{TIM15}, koji je konfiguriran u jednokratnom modu rada (eng.
 \textit{One-Pulse Mode}). Prekidna rutina tajmera \texttt{TIM15} izvršava se
 pred sam kraj neaktivnog dijela ciklusa PWM-a. U tom trenutku, kada nema
-aktivnog sklapanja, struja recirkulira kroz donji tranzistor polumosta i inducirani napon je
-najstabilniji za mjerenje. Unutar te prekidne rutine očitava se stanje na
-odgovarajućem \texttt{GPIO} pinu (\texttt{CMP1\_Pin}, \texttt{CMP2\_Pin} ili
-\texttt{CMP3\_Pin}), ovisno o trenutačnom komutacijskom koraku.
+aktivnog sklapanja, struja recirkulira kroz donji tranzistor polumosta i
+inducirani napon je najstabilniji za mjerenje. Unutar te prekidne rutine
+očitava se stanje na odgovarajućem \texttt{GPIO} pinu (\texttt{CMP1\_Pin},
+\texttt{CMP2\_Pin} ili \texttt{CMP3\_Pin}), ovisno o trenutačnom komutacijskom
+koraku.
 
 \missingfigure{Blok dijagram sustava za detekciju PEMS-a (veza faza, virtualnog zvjezdišta, komparatora i GPIO ulaza mikrokontrolera)}
 \missingfigure{Osciloskopska snimka koja prikazuje PWM signal na jednoj fazi, PEMS na neopterećenoj fazi i digitalni signal koji označava trenutak uzorkovanja (okidanje TIM15 prekida)}
@@ -1150,14 +1152,15 @@ odgovarajućem \texttt{GPIO} pinu (\texttt{CMP1\_Pin}, \texttt{CMP2\_Pin} ili
 \label{ssec:komunikacija}
 
 Za komunikaciju sa sustavom koristi se sučelje \texttt{USART2}, konfigurirano
-za rad pri brzini od \SI{115200}{bit\per\second}. Prijenos podataka je automatiziran
-korištenjem direktnog pristupa memoriji (eng. \textit{Direct Memory Access,
-	DMA}). Sustav je konfiguriran da preko kanala DMA kontinuirano prima dva bajta
-podataka. Nakon primitka, u prekidnoj rutini \texttt{HAL\_UART\_RxCpltCallback}
-ta dva bajta se spajaju u 16-bitnu vrijednost koja predstavlja novu zadanu
-brzinu vrtnje. Istovremeno, sustav periodično šalje trenutačnu procijenjenu
-brzinu vrtnje nazad prema nadređenom sustavu, također koristeći DMA, čime se
-omogućuje nadzor rada motora u stvarnom vremenu.
+za rad pri brzini od \SI{115200}{bit\per\second}. Prijenos podataka je
+automatiziran korištenjem direktnog pristupa memoriji (eng. \textit{Direct
+	Memory Access, DMA}). Sustav je konfiguriran da preko kanala DMA kontinuirano
+prima dva bajta podataka. Nakon primitka, u prekidnoj rutini
+\texttt{HAL\_UART\_RxCpltCallback} ta dva bajta se spajaju u 16-bitnu
+vrijednost koja predstavlja novu zadanu brzinu vrtnje. Istovremeno, sustav
+periodično šalje trenutačnu procijenjenu brzinu vrtnje nazad prema nadređenom
+sustavu, također koristeći DMA, čime se omogućuje nadzor rada motora u stvarnom
+vremenu.
 
 \missingfigure{Tablica koja definira komunikacijski protokol (naredba, format podataka) za zadavanje brzine i primanje telemetrije}
 
@@ -1174,10 +1177,11 @@ brzine, prateći teorijski model opisan u poglavlju
 \label{ssec:pokretanje_motora}
 
 Pokretanje motora iz mirovanja, kako je teorijski obrazloženo u odjeljku
-\ref{sec:pokretanje}, započinje s poravnanjem rotora. Rotor se može nalaziti u položaju
-koji je za \ang{180} stupnjeva pomaknut od željenog smjera magnetskog
+\ref{sec:pokretanje}, započinje s poravnanjem rotora. Rotor se može nalaziti u
+položaju koji je za \ang{180} stupnjeva pomaknut od željenog smjera magnetskog
 polja, što bi rezultiralo neuspješnim poravnanjem. Zbog toga se izvode dva
-početna, vremenski dugačka koraka komutacije, svaki u trajanju od približno \SI{260}{\milli\second}.
+početna, vremenski dugačka koraka komutacije, svaki u trajanju od približno
+\SI{260}{\milli\second}.
 
 Nakon poravnanja, sustav prelazi u fazu rada u otvorenoj petlji. U ovoj fazi,
 komutacija se izvodi prisilno pozivima funkcije \texttt{motor\_step}, a
@@ -1185,9 +1189,9 @@ vremenski razmak između koraka se postepeno smanjuje prema unaprijed određenoj
 akceleracijskoj rampi definiranoj u tablici \texttt{step\_times\_us}. Kako se
 frekvencija komutacije povećava, rotor zbog svoje tromosti počinje zaostajati
 za rotirajućim magnetskim poljem statora. Time se postiže poželjni kut koji
-omogućuje detekciju prolaska PEMS-a kroz nulu. Vrijedi napomenuti da, kako rotor
-s vremenom sve više kasni, prilika za detekciju prolaska kroz nulu traje svega
-nekoliko koraka. Stoga je bitno pouzdano detektirati i zabilježiti sve
+omogućuje detekciju prolaska PEMS-a kroz nulu. Vrijedi napomenuti da, kako
+rotor s vremenom sve više kasni, prilika za detekciju prolaska kroz nulu traje
+svega nekoliko koraka. Stoga je bitno pouzdano detektirati i zabilježiti sve
 prolaske kroz nulu u tom periodu.
 
 \missingfigure{Tablica s komutacijskim stanjima za svih šest koraka s prikazom aktivnih tranzistora i nadzirane faze}
@@ -1226,11 +1230,11 @@ Tijekom naglih promjena brzine ili opterećenja, može doći do desinkronizacije
 Implementirana su dva mehanizma za oporavak. Ako rotor urani i prolazak kroz
 nulu se dogodi \textit{prije} prozora za detekciju, sustav to registrira te
 proglasi trenutak na početku prozora detekcije kao prolazak kroz nulu. Ovo
-efektivno skraćuje trajanje trenutačnog koraka, čime se stator ubrzava i pokušava "pobjeći"
-rotoru. S druge strane, ako rotor kasni i prolazak kroz nulu se ne dogodi
-unutar prozora, sustav označava kraj prozora kao trenutak detekcije, čime se
-sljedeći korak produžuje, a polje statora usporava i "čeka" rotor. Ove
-korekcije osiguravaju stabilnost upravljačke petlje.
+efektivno skraćuje trajanje trenutačnog koraka, čime se stator ubrzava i
+pokušava "pobjeći" rotoru. S druge strane, ako rotor kasni i prolazak kroz nulu
+se ne dogodi unutar prozora, sustav označava kraj prozora kao trenutak
+detekcije, čime se sljedeći korak produžuje, a polje statora usporava i "čeka"
+rotor. Ove korekcije osiguravaju stabilnost upravljačke petlje.
 
 \subsection{Regulacija brzine u zatvorenoj petlji}
 \label{ssec:regulacija_brzine}
@@ -1367,6 +1371,100 @@ int32_t PID_calculate(PIDController *pid, int32_t setpoint,
 
 \missingfigure{Blok dijagram implementirane PI regulacijske petlje}
 
+%--- USPOREDBA / COMPARISON----------------------------------------------------
+
+\chapter{Usporedba ostvarene implementacije s postojećim rješenjem}
+\label{pog:usporedba}
+
+Kako bi se vrednovala uspješnost ostvarene implementacije, provedena je
+usporedba njezinih radnih karakteristika s komercijalno dostupnim elektroničkim
+sklopom za upravljanje brzinom. Za potrebe usporedbe korišten je popularni ESC
+\textit{SimonK 30A}. Usporedba se temelji na mjerenju vanjskih pokazatelja
+izvedbe u identičnim uvjetima.
+
+% \section{Metodologija testiranja}
+% \label{sec:metodologija_testiranja}
+%
+% Sva mjerenja provedena su na eksperimentalnom postavu opisanom u poglavlju
+% \ref{pog:postav}, koristeći isti elektromotor (\textit{A2212/13T 1000KV}) i
+% laboratorijski izvor napajanja. Za svako mjerenje, napon napajanja je
+% postavljen na fiksnu vrijednost kako bi se osigurali ponovljivi uvjeti. Brzina
+% vrtnje mjerena je pomoću apsolutnog enkodera, a struja je mjerena preciznim
+% digitalnim multimetrom spojenim u seriju s izvorom napajanja.
+%
+% Usporedba je provedena kroz nekoliko ključnih testova koji ocjenjuju različite
+% aspekte izvedbe:
+% \begin{itemize}
+% 	\item Maksimalna brzina vrtnje bez opterećenja
+% 	\item Efikasnost pri statičkom opterećenju
+% 	\item Dinamički odziv na promjenu upravljačkog signala
+% 	\item Minimalna stabilna brzina vrtnje
+% \end{itemize}
+%
+% \section{Maksimalna brzina vrtnje bez opterećenja}
+% \label{sec:usporedba_brzina}
+%
+% Prvi test uspoređuje sposobnost oba rješenja da postignu maksimalnu brzinu
+% vrtnje motora bez opterećenja (bez propelera). Ovaj test primarno pokazuje
+% učinkovitost komutacijske logike i sposobnost upravljačkog sklopa da iskoristi
+% puni potencijal motora pri zadanom naponu. Mjerenja su provedena pri tri
+% različite razine istosmjernog napona, a rezultati su prikazani u tablici
+% \ref{tab:usporedba_brzine}.
+%
+% \missingfigure{Tablica s usporedbom maksimalne brzine vrtnje (RPM) za implementirano i komercijalno rješenje pri naponima od 8 V, 10 V i 12 V.}
+% \label{tab:usporedba_brzine}
+%
+% \todo[inline]{Ovdje treba dodati kratku analizu rezultata iz tablice. Npr. "Iz rezultata je vidljivo da ostvarena implementacija postiže približno jednaku (ili višu/nižu) maksimalnu brzinu vrtnje u usporedbi s komercijalnim rješenjem..."}
+%
+% \section{Efikasnost pri statičkom opterećenju}
+% \label{sec:usporedba_efikasnost}
+%
+% Efikasnost je jedan od najvažnijih parametara za primjenu u bespilotnim
+% letjelicama jer izravno utječe na vrijeme leta. U ovom testu, na motor je
+% postavljen standardni propeler kako bi se stvorilo statičko opterećenje.
+% Mjerena je ulazna električna snaga (napon $\times$ struja) potrebna za
+% postizanje određenih brzina vrtnje. Niža potrošnja struje za istu brzinu vrtnje
+% implicira veću efikasnost.
+%
+% Mjerenja su provedena pri konstantnom naponu od \SI{12}{\volt}, a rezultati su
+% prikazani na slici \ref{fig:usporedba_efikasnosti}.
+%
+% \missingfigure{Graf koji prikazuje ovisnost potrošnje struje (A) o brzini vrtnje (RPM) za implementirano i komercijalno rješenje.}
+% \label{fig:usporedba_efikasnosti}
+%
+% \todo[inline]{Ovdje analizirati graf. Npr. "Graf na slici \ref{fig:usporedba_efikasnosti} pokazuje da implementirano rješenje troši manje struje pri nižim brzinama, dok je pri višim brzinama potrošnja usporediva. To ukazuje na dobru optimizaciju algoritma za rad pri djelomičnom opterećenju..."}
+%
+% \section{Dinamički odziv}
+% \label{sec:usporedba_odziv}
+%
+% Brzina odziva na promjenu upravljačkog signala ključna je za agilnost i
+% stabilnost bespilotne letjelice. U ovom testu mjereno je vrijeme potrebno da
+% motor ubrza od niske brzine vrtnje (npr. 20\% od maksimuma) do visoke brzine
+% (npr. 80\% od maksimuma) nakon skokovite promjene upravljačkog signala. Vrijeme
+% odziva praćeno je analizom promjene frekvencije signala na jednoj od faza
+% motora pomoću osciloskopa.
+%
+% \missingfigure{Tablica s usporedbom vremena odziva (u milisekundama) za ubrzanje od 20\% do 80\% maksimalne brzine.}
+%
+% \todo[inline]{Kratka analiza rezultata odziva. Npr. "Implementirano rješenje pokazuje nešto brži (ili sporiji) odziv, što se može pripisati agresivnije (ili konzervativnije) podešenim parametrima PI regulatora..."}
+%
+% \section{Minimalna stabilna brzina vrtnje}
+% \label{sec:usporedba_min_rpm}
+%
+% Sposobnost održavanja stabilne vrtnje pri vrlo malim brzinama pokazatelj je
+% kvalitete algoritma za pokretanje i upravljanje u zatvorenoj petlji pri niskim
+% PEMS signalima. U ovom testu, postepeno je smanjivan upravljački signal te je
+% zabilježena najniža brzina vrtnje (RPM) pri kojoj motor radi glatko, bez
+% zastajkivanja i desinkronizacije.
+%
+% \missingfigure{Tablica s usporedbom minimalne stabilne brzine vrtnje (RPM) za oba rješenja.}
+%
+% \todo[inline]{Analiza minimalne brzine. Npr. "Rezultati pokazuju da implementirani algoritam postiže nižu minimalnu stabilnu brzinu, što ukazuje na robusnost BEMF detekcije i logike za obradu rubnih slučajeva pri malim brzinama."}
+%
+% \section{Sažetak usporedbe}
+% \label{sec:sazetak_usporedbe}
+%
+% \todo[inline]{Ovdje dolazi završni odlomak koji sažima sve prethodne rezultate i donosi konačni zaključak o uspješnosti Vaše implementacije. Npr. "Usporedbom ključnih pokazatelja izvedbe, utvrđeno je da ostvarena implementacija pruža performanse usporedive s komercijalnim rješenjem. Posebno se ističe visoka efikasnost pri djelomičnom opterećenju, što je povoljno za primjenu u bespilotnim letjelicama. Iako komercijalno rješenje nudi nešto brži dinamički odziv, implementirani algoritam pokazuje bolju stabilnost pri niskim brzinama vrtnje. Sveukupno, rezultati potvrđuju da je razvijeno rješenje uspješno i konkurentno postojećim sustavima."}
 %--- ZAKLJUČAK / CONCLUSION ----------------------------------------------------
 \chapter{Zaključak}
 \label{pog:zakljucak}
@@ -1393,8 +1491,8 @@ int32_t PID_calculate(PIDController *pid, int32_t setpoint,
 	opisane faze pokretanja i rada motora, od početnog poravnanja do prelaska na
 	zatvorenu petlju. Implementirano je rješenje upravljanja brzinom na odabranom
 	sklopovlju koje uključuje sklop za elektroničko upravljanje brzine, motor
-	\textit{A2212/13T 1000KV} i razvojnu pločicu \texttt{Nucleo-G071RB} s mikrokontrolerom
-	\texttt{STM32G071RB}.
+	\textit{A2212/13T 1000KV} i razvojnu pločicu \texttt{Nucleo-G071RB} s
+	mikrokontrolerom \texttt{STM32G071RB}.
 \end{sazetak}
 
 \begin{kljucnerijeci}
@@ -1415,8 +1513,8 @@ int32_t PID_calculate(PIDController *pid, int32_t setpoint,
 	motor's startup and operating phases, from initial alignment to closed-loop
 	transition, are detailed. The speed control solution is implemented on selected
 	hardware, which includes an electronic speed controller, an \textit{A2212/13T
-		1000KV} motor, and a \texttt{Nucleo-G071RB} development board with an \texttt{STM32G071RB}
-	microcontroller.
+		1000KV} motor, and a \texttt{Nucleo-G071RB} development board with an
+	\texttt{STM32G071RB} microcontroller.
 \end{abstract}
 
 \begin{keywords}
